--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -252,9 +252,6 @@
 #submit-modal.fencing-modal--v2 {
 
     .fencing-modal-content{
-        @include md{
-            padding-bottom: 56px;
-        }
         @include sm{
             padding-top: 36px;
         }
@@ -293,7 +290,7 @@
         }
 
         button{
-            @include md {
+            @include mmd {
                 margin-left: 0;
             }
         }
